Setting up swagger
