# docs/swagger.json
@@ -20,7 +20,7 @@
     "paths": {
         "/movies": {
             "post": {
-                "description": "create a new movie",
+                "description": "create a new movie zzz",
                 "consumes": [
                     "application/json"
                 ],
@@ -33,18 +33,20 @@
                 "summary": "Creates a movie",
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "Movie ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
+                        "description": "Add movie",
+                        "name": "movie",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/github_com_splekhanov_go-simple-crud_internal_model.Movie"
+                        }
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github_com_splekhanov_go-simple-crud_internal_models.Movie"
+                            "$ref": "#/definitions/github_com_splekhanov_go-simple-crud_internal_model.Movie"
                         }
                     }
                 }
@@ -52,7 +54,7 @@
         }
     },
     "definitions": {
-        "github_com_splekhanov_go-simple-crud_internal_models.Movie": {
+        "github_com_splekhanov_go-simple-crud_internal_model.Movie": {
             "type": "object",
             "properties": {
                 "country": {
